; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_ctxnv50.c_nv50_graph_construct_xfer_tp.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_ctxnv50.c_nv50_graph_construct_xfer_tp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_grctx = type { %struct.nouveau_device* }
%struct.nouveau_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nouveau_grctx*)* @nv50_graph_construct_xfer_tp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nv50_graph_construct_xfer_tp(%struct.nouveau_grctx* %0) #0 {
  %2 = alloca %struct.nouveau_grctx*, align 8
  %3 = alloca %struct.nouveau_device*, align 8
  store %struct.nouveau_grctx* %0, %struct.nouveau_grctx** %2, align 8
  %4 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %5 = getelementptr inbounds %struct.nouveau_grctx, %struct.nouveau_grctx* %4, i32 0, i32 0
  %6 = load %struct.nouveau_device*, %struct.nouveau_device** %5, align 8
  store %struct.nouveau_device* %6, %struct.nouveau_device** %3, align 8
  %7 = load %struct.nouveau_device*, %struct.nouveau_device** %3, align 8
  %8 = getelementptr inbounds %struct.nouveau_device, %struct.nouveau_device* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp slt i32 %9, 160
  br i1 %10, label %11, label %20

11:                                               ; preds = %1
  %12 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %13 = call i32 @nv50_graph_construct_xfer_unk84xx(%struct.nouveau_grctx* %12)
  %14 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %15 = call i32 @nv50_graph_construct_xfer_tprop(%struct.nouveau_grctx* %14)
  %16 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %17 = call i32 @nv50_graph_construct_xfer_tex(%struct.nouveau_grctx* %16)
  %18 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %19 = call i32 @nv50_graph_construct_xfer_unk8cxx(%struct.nouveau_grctx* %18)
  br label %29

20:                                               ; preds = %1
  %21 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %22 = call i32 @nv50_graph_construct_xfer_tex(%struct.nouveau_grctx* %21)
  %23 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %24 = call i32 @nv50_graph_construct_xfer_tprop(%struct.nouveau_grctx* %23)
  %25 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %26 = call i32 @nv50_graph_construct_xfer_unk8cxx(%struct.nouveau_grctx* %25)
  %27 = load %struct.nouveau_grctx*, %struct.nouveau_grctx** %2, align 8
  %28 = call i32 @nv50_graph_construct_xfer_unk84xx(%struct.nouveau_grctx* %27)
  br label %29

29:                                               ; preds = %20, %11
  ret void
}

declare dso_local i32 @nv50_graph_construct_xfer_unk84xx(%struct.nouveau_grctx*) #1

declare dso_local i32 @nv50_graph_construct_xfer_tprop(%struct.nouveau_grctx*) #1

declare dso_local i32 @nv50_graph_construct_xfer_tex(%struct.nouveau_grctx*) #1

declare dso_local i32 @nv50_graph_construct_xfer_unk8cxx(%struct.nouveau_grctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
